--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/fav/check-list.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/stylist-todo-list/style.css">
     <title>ToDo List</title>
 </head>
 
@@ -22,20 +22,20 @@
             </div>
             <div class="list_wrap">
                 <div class="action_ _first">
-                    <div class="sqrt-bg_1"><img src="/icon/close.png" alt="" srcset=""></div>
+                    <div class="sqrt-bg_1"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <p class="task_1" style="font-weight: 700;">Task Unfinished</p>
                 </div>
                 <div class="action_ _two">
-                    <div class="sqrt-bg_2"><img src="/icon/close.png" alt="" srcset=""></div>
-                    <img class="mark" src="/icon/mark.png" alt="" srcset="">
+                    <div class="sqrt-bg_2"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
+                    <img class="mark" src="/stylist-todo-list/icon/mark.png" alt="" srcset="">
                     <p class="task_2" style="font-weight: 700;">Important/Prority Task</p>
                 </div>
                 <div class="action_ _three">
-                    <div class="sqrt-bg_3"><img src="/icon/close.png" alt="" srcset=""></div>
+                    <div class="sqrt-bg_3"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <p class="task_3" style="font-weight: 700;">Subtask</p>
                 </div>
                 <div class="action_ _four">
-                    <div class="sqrt-bg_4"><img class="loading" src="/icon/loading.png" alt="" srcset=""></div>
+                    <div class="sqrt-bg_4"><img class="loading" src="/stylist-todo-list/icon/loading.png" alt="" srcset=""></div>
                     <p class="task_4" style="font-weight: 700;">Task in Progress...</p>
                 </div>
                 <div class="action_ _five">
