--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="_container_todo_list">
             <div class="header">
                 <h1>ToDo List</h1>
-                <p>This is a super cool ToDo List!</p>
+                <p>This is a super cool ToDo List! ~ by Hubert.</p>
             </div>
             <div class="section_title">
                 <h2>Write yourself acticity objects</h2>
@@ -25,7 +25,7 @@
                     <div class="sqrt-bg_1"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <p class="task_1" style="font-weight: 700;">Task Unfinished</p>
                 </div>
-                <div class="action_ _two">
+                <div class="action_ _two"></div>
                     <div class="sqrt-bg_2"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <img class="mark" src="/stylist-todo-list/icon/mark.png" alt="" srcset="">
                     <p class="task_2" style="font-weight: 700;">Important/Prority Task</p>
@@ -39,10 +39,12 @@
                     <p class="task_4" style="font-weight: 700;">Task in Progress...</p>
                 </div>
                 <div class="action_ _five">
-                    <p class="task_5" style="font-weight: 700;">Waiting for Approbal / Temporarity finished task</p>
+                    <div class="sqrt-bg_5"><img class="check" src="/stylist-todo-list/icon/check.png" alt="" srcset=""></div>
+                    <p class="task_5" style="font-weight: 400;">Waiting for Approbal /<br>Temporarity finished task</p>
                 </div>
                 <div class="action_ _six">
-                    <p class="task_6" style="font-weight: 700;">Task Done</p>
+                    <div class="sqrt-bg_6"><img class="check" src="/stylist-todo-list/icon/check.png" alt="" srcset=""></div>
+                    <p class="task_6" style="font-weight: 400;">Task Done</p>
                 </div>
             </div>
         </div>
