--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+    <!-- main content -->
     <main class="main_content">
+        <!-- section header  -->
         <div class="_container_todo_list">
             <div class="header">
                 <h1>ToDo List</h1>
@@ -20,6 +22,9 @@
                 <h2>Write yourself acticity objects</h2>
                 <p></p>
             </div>
+            <!-- section header  -->
+
+            <!-- section list wrap -->
             <div class="list_wrap">
                 <div class="action_ _first">
                     <div class="sqrt-bg_1"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
@@ -47,8 +52,11 @@
                     <p class="task_6" style="font-weight: 400;">Task Done</p>
                 </div>
             </div>
+             <!-- section list wrap -->
+
         </div>
     </main>
+     <!-- main content -->
 </body>
 
 </html>
