add media screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/fav/check-list.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/stylist-todo-list/fav/check-list.png" type="image/x-icon">
     <link rel="stylesheet" href="/stylist-todo-list/style.css">
     <title>ToDo List</title>
 </head>
@@ -23,16 +23,15 @@
                 <p></p>
             </div>
             <!-- section header  -->
-
             <!-- section list wrap -->
             <div class="list_wrap">
                 <div class="action_ _first">
                     <div class="sqrt-bg_1"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <p class="task_1" style="font-weight: 700;">Task Unfinished</p>
                 </div>
-                <div class="action_ _two"></div>
-                    <div class="sqrt-bg_2"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
+                <div class="action_ _two">
                     <img class="mark" src="/stylist-todo-list/icon/mark.png" alt="" srcset="">
+                    <div class="sqrt-bg_2"><img src="/stylist-todo-list/icon/close.png" alt="" srcset=""></div>
                     <p class="task_2" style="font-weight: 700;">Important/Prority Task</p>
                 </div>
                 <div class="action_ _three">
@@ -53,7 +52,6 @@
                 </div>
             </div>
              <!-- section list wrap -->
-
         </div>
     </main>
      <!-- main content -->
